# server/item.router.js
@@ -18,7 +18,7 @@ router.delete("/items/:itemId", (req, res) =>{
 });
 
 /** CREATE A NEW ITEM */
-router.post("/items", (req, res) =>{
+router.post("/", (req, res) => {
     const props = {
         imgSrc: "google.com",
         title: "phone red",
@@ -38,7 +38,7 @@ router.post("/items", (req, res) =>{
 });
 
 /** Returns an item*/
-router.get("/items/:itemId", (req, res)=>{
+router.get("/:itemId", (req, res)=>{
     Item.findById(req.params.itemId, function (err, item) {
         if(err){
             console.log("Error:", err);
@@ -53,7 +53,7 @@ router.get("/items/:itemId", (req, res)=>{
 /**
  * Returns all items
  */
-router.get("/items", (req, res)=>{
+router.get("/", (req, res)=>{
     Item.find({}, function(err, items){
         if(err){
             console.log("Error:", err);
